--- a/bmi_backend/bmi_calc/src/main/resources/application.properties
+++ b/bmi_backend/bmi_calc/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #configuration
 
 spring.jpa.hibernate.ddl-auto = update
-spring.datasource.url=jdbc:mysql://localhost:3306/patient_bmi
+spring.datasource.url=jdbc:mysql://localhost:3306/react_boot_bmi
 spring.datasource.username = root
 spring.datasource.password = isaacnewton
 
